# crud-week

./: README.md
crud-01/: dogs_breed.db
crud-01/src/: databse.py  main.py  models.py  schema.py  seeds.py
crud-02/: README.md  brazil_geo.db  main.py  pyproject.toml
crud-02/src/: controller.py  crud.py  database.py  main.py  models.py
crud-03/: README.md  company_hr.db  pyproject.toml
crud-03/src/: controller.py  crud.py  database.py  main.py  models.py
crud-04/: README.md  pyproject.toml
crud-04/src/: chain.db  controller.py  crud.py  database.py  main.py  models.py
crud-05/: README.md  pyproject.toml  sales.db
crud-05/data/: logistics_updates.csv  orders_new.csv  sales.csv
crud-05/scripts/: data_generator.py
crud-05/src/: controller.py  crud.py  database.py  etl.py  main.py  models.py  sales.db
crud-05/src/assets/: data_generator_test.py
